# cyber-sec-lms

./: .flaskenv  .gitignore  README.md  celeryconfig.py  config.py  data_access.py  pyproject.toml  redis_config.py  redis_test.py  remote_control.py  remote_ctl_config.py  tasks.py  test_app.py  tests.py
app/: __init__.py  data_access.py  forms.py  models.py  remote_control.py  routes.py  tasks.py
app/static/js/: admin.js  index.js  lab_room.js  stateMonitoring.js
app/templates/: _flash.html  _host_entry.html  _lab_card.html  _lab_entry.html  _lab_player.html  _save_entry.html  _unreg_entry.html  admin.html  base.html  base_admin.html  host_control.html  host_create.html  host_edit.html  index.html  lab_control.html  lab_create.html  lab_edit.html  lab_room.html  labs.html  login.html
migrations/versions/: 1615725d56ce_save_date_added.py  246eee59b734_lab_description_and_save_comment_fields_.py  290048a72164_host_os_type.py  47a6f2b92351_save_is_default.py  556eaada1d60_backup_uid_replaced_uuid.py  6ac4bb69fc24_lab_description_nullable.py  7a8852df5bf8_some_unique_constraints_dropped.py  7f90fbb84cb3_save_backup_one_to_many_relation_added.py  925dc86dda28_hidden_lab.py  9956fcf77a55_base_structure.py  a2f16ff2ad2e_save_uid.py  b48886663b8d_cascade_delete.py  cf433b44bddb_remove_save_is_default_nullable.py  d3924914c9e8_dir_field_added_to_backup.py  f69438ab99ba_groupbackup_model_added.py
