[project]
name = "cyber-sec-lms"
version = "0.1.0"
description = ""
authors = [
    {name = "Arapov Nikita",email = "nicarpov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "flask-dotenv (>=0.1.2,<0.2.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "flask-sock (>=0.7.0,<0.8.0)",
    "redis (>=6.2.0,<7.0.0)",
    "fabric (>=3.2.2,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "flask-moment (>=1.0.6,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
eventlet = "^0.40.1"
pytest = "^8.4.1"

